# TensorRT

./: README.md
TensorRT-BoTNet/: CMakeLists.txt  README.md  botnet.cpp  gen_wts.py
TensorRT-EfficientNet-B0/: CMakeLists.txt  EfficientNetB0.cpp  README.md  gen_wts.py
